<resources>
    <string name="app_name">WhereWEAR</string>

    <!-- Strings in Splash Activity -->
    <string name="BLE_not_supported">BLE is not supported.</string>
    <string name="location_service">Location</string>
    <string name="location_required">You have to allow to access location service to find wallets.</string>
    <string name="external_storage">External Storage</string>
    <string name="storage_required">You have to allow to access external storage to use custom alarms.</string>

    <string name="error_bluetooth_not_enabled">Bluetooth activation is required.\nPlease turn on Bluetooth and start again.</string>
    <string name="error_grant_permission">Permission is available after authorization.</string>
    <string name="error_none_select_device">Please Select the Wear</string>

    <!-- Widgets in Main Activity -->
    <string name="title_main">WEAR</string>
    <string name="title_sensor_full">Sensor Count</string>
    <string name="msg_sensor_full">You can use max 5 sensors</string>
    <string name="btn_find_sensor">Finding Wear</string>
    <string name="btn_location_sensor">Wear location</string>
    <string name="btn_modify_sensor">Modify wear</string>
    <string name="btn_info_sensor">Instructions</string>
    <string name="btn_muteon_sensor">Mute on</string>
    <string name="btn_muteoff_sensor">Mute off</string>
    <string name="btn_add_sensor">Add my wear</string>

    <string name="no_add_sensor">No Added Sensor\nPlease, add Sensor</string>

    <!-- Widgets in Search Activity -->
    <string name="title_search">Add Wallet</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="register_sensor">Register Sensor</string>

    <!-- Widgets in Sensor Activity -->
    <string name="search_wear">Search Wear</string>
    <string name="title_sensor">My Wallet</string>
    <string name="sensor_info">Sensor Info</string>
    <string name="cmd_search_sensor">Search</string>
    <string name="cmd_modify_sensor">Apply</string>
    <string name="cmd_remove_sensor">Delete</string>
    <string name="remove_title">Remove Wallet</string>
    <string name="remove_message">Are you sure to delete?</string>
    <string name="select_complete">Select Complete</string>

    <!-- Widgets in Register Activity -->
    <string name="title_register">Register Wallet</string>
    <string name="title_modify">Modify Wallet</string>
    <string name="sensor_id">Sensor ID:</string>
    <string name="sensor_name">Sensor Name:</string>
    <string name="wear_name">Wear Name:</string>
    <string name="my_wallet">My Wallet</string>
    <string name="phone_no">Phone No:</string>
    <string name="action_mode">Action Mode:</string>
    <string name="ask_bring_phonenumber">Request</string>
    <string name="ask_phone">Could I Bring Your Phone Number?</string>
    <string name="select_wear">Select Wear : </string>
    <string name="brief_description1">When selected, the software will generate a connection \ntone after 2 ~ 3 seconds.</string>
    <string name="brief_description2">Sound stops when you press the button.</string>
    <string name="action_loss">Prevent Loss</string>
    <string name="action_theft">Prevent Theft</string>
    <string name="register">Register</string>
    <string name="modify">Modify Complete</string>
    <string name="edit_wallet">Apply</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="msg_check_device">Select Wallet Device</string>
    <string name="msg_check_name">Enter Wallet Name</string>
    <string name="msg_check_phone">Enter Phone Number</string>
    <string name="title_confirm_register">Register</string>
    <string name="msg_confirm_register">Are you sure to add wallet?</string>
    <string name="title_confirm_modify">Modify</string>
    <string name="msg_confirm_modify">Are you sure to modify wallet?</string>
    <string name="msg_sensor_modified">modified wallet.</string>
    <string name="lb_connect_state">Connection:</string>
    <string name="connect_state_on">Connected</string>
    <string name="connect_state_off">Disconnected</string>
    <string name="cmd_connect">Connect</string>
    <string name="cmd_disconnect">Disconnect</string>
    <string name="cmd_find">Find</string>
    <string name="cmd_stop">Stop</string>
    <string name="hint_sensor_id">Sensor Address</string>
    <string name="hint_sensor_name">Sensor Name</string>
    <string name="hint_wear_name">Wear Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="start_detect_sensor">Detecting Sensor</string>
    <string name="no_detect_sensor">Not Detect Sensor\nPlease, Retry Again</string>
    <string name="btn_register">Register Complete</string>
    <string name="btn_close">Select Complete</string>
    <string name="btn_confirm">Confirm</string>

    <string name="title_activity_settings">Settings</string>
    <string name="titlebar_manual">Wear manual</string>
    <string name="null_wearName">Wear</string>
    <string name="wear_mode_help_lost_title">Preventing Lost</string>
    <string name="wear_mode_help_lost_body">An alarm is generated when the distance is disturbed or when the signal becomes weak. (The distance value varies depending on the surrounding environment.)</string>
    <string name="wear_mode_help_steal_title">Theft prevention</string>
    <string name="wear_mode_help_steal_body">When a user specifies a specific distance value and reaches the distance, an alarm is generated and the user immediately confirms the theft.</string>

    <!-- Strings related to Settings -->
    <string name="title_setting">Settings</string>

    <string name="pref_title_alarm_category">Alarm Setting</string>
    <string name="pref_title_alarm_disconnected">Disconnected Alarm</string>
    <string name="pref_title_alarm_find_phone">Find Phone Alarm</string>
    <string name="pref_summary_ringtone_silent">Silent</string>
    <string name="pref_title_alarm_vibrate">Vibrate</string>
    <string name="pref_summary_alarm_vibrate">Use vibrate together on alarm.</string>
    <string name="pref_title_alarm_duration">Duration</string>
    <string name="pref_summary_proximity_alarm_allowed">Alarm is sounded when reconnecting</string>

    <string name="pref_title_sound_alarm_allowed">Sound Mode</string>
    <string name="pref_summary_sound_alarm_allowed">Alert Sound</string>

    <string-array name="pref_alarm_duration_titles">
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
    </string-array>
    <string-array name="pref_alarm_duration_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>


    <string name="pref_title_proximity_alarm_allowed">Proximity alarm allowed</string>
    <string name="pref_title_app_control_category">App Control</string>
    <string name="pref_title_start_on_boot">Start Wear on Boot</string>
    <string name="pref_summary_start_on_boot">Auto execute Wear App on phone boot.</string>
    <string name="pref_title_app_control_restart">Restart App</string>
    <string name="pref_summary_app_control_restart">Restart app including service.\n(Alarm is sounded when reconnecting)</string>
    <string name="pref_confirm_app_control_restart">Are you sure to restart Wear?</string>
    <string name="pref_title_app_control_finish">Finish App</string>
    <string name="pref_summary_app_control_finish">Finish app completely including service.\n(Alarm is sounded when reconnecting)</string>
    <string name="pref_confirm_app_control_finish">Are you sure to finish Wear?</string>
    <string name="pref_show_app_Information">App Information</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_company_title">Producer\t\t TheUnify Co., Ltd.</string>

    <string name="pref_app_control_restart">Restart app.</string>
    <string name="pref_app_control_finish">Finish app.</string>
    <string name="pref_title_show_guide">Wear Guide</string>
    <string name="pref_summary_show_guide">Open Wear Guide Web Page</string>

    <string name="title_activity_sensor_info">Sensor Information</string>

    <string name="alert_msg_lost_sensor">Disconnected Sensor</string>
    <string name="alert_msg_connect_sensor">Connected Sensor</string>
    <string name="alert_msg_find_sensor">Find From Sensor</string>

    <!--  <string name="alert_msg_bubble">How to Use</string> -->

    <string name="Power_On">Power ON</string>
    <string name="Power_On_summary">Press button for 1 second, \n5 monophonic sounds</string>
    <string name="Power_Off">Power OFF</string>
    <string name="Power_Off_summary">If you press the button of the software for 5 seconds, \n5 times after the 4th monophonic sound \n(a short beep sounds on the mobile phone)</string>
    <string name="Charge_start">Start charging</string>
    <string name="Charge_start_summary">Two singles</string>
    <string name="Charge_status">Charge termination/completion</string>
    <string name="Charge_status_summary">One single occurrence</string>
    <string name="secession_of_wear">Secession of wear</string>
    <string name="secession_of_wear_summary">4 monophonic occurrences \n(disconnected beep on mobile phone)</string>
    <string name="disconnection">Disconnected</string>
    <string name="disconnection_summary">5 mono occurrences \n(disconnected beeps on phone)</string>
    <string name="Search_for_wear">Finding Wear</string>
    <string name="Search_for_wear_summary">4 monophonic occurrences \n(Sound is interrupted when the button is pressed)</string>
    <string name="Find_a_cell_phone">Find a cell phone</string>
    <string name="Find_a_cell_phone_summary">Pressing the button twice per second \n Searching on your phone</string>
    <string name="confirm">Confirm</string>
    <!--//////////////////////////////////////////////////////////////////////////////////////////-->
    <string name="pref_sound_only">Sound only mode</string>
    <string name="pref_sound_only_summary">Sound only mode</string>
    <string name="preventing_Lost">Preventing Lost</string>
    <string name="preventing_Lost_summary">Preventing Lost</string>
    <string name="theft_prevention">Theft prevention</string>
    <string name="theft_prevention_summary">When the user specifies a value of a specific distance \nAn alarm is generated when the distance is reached, \nConfirm immediately whether it is stolen or not.</string>
    <string name="hardware_specification">Wear specification</string>
    <string name="hardware_specification_summary1">Communication : Bluetooth 5.0</string>
    <string name="hardware_specification_summary2">Constant pressure : 3.7 V 200mAh Li-Polymer</string>
    <string name="hardware_specification_summary3">Charging : Wireless 1 to 2 hours</string>
    <string name="hardware_specification_summary4">Standby : about 20 days(When fully charged)</string>
    <string name="Copyright">Copyright 2019 TheUnify Corp</string>
    <string name="SmartPouch_Url">www.thesmartpouch.com</string>
    <string name="TheUnify_Url">www.theunify.co.kr</string>
</resources>
